k8s/overlays/prod/patch-oss-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oss-client
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: oss-client
        resources:
          limits:
            cpu: "400m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
